--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -125,9 +125,9 @@ td.ft-lineup-cell { vertical-align: middle !important; }
 span.ft-drop-down-span {
 	position: relative;
 	padding-right: 5px;
-	background: url(../img/drop-down.png) right center no-repeat;
+	background: url(../img/pop-up.png) right center no-repeat;
 }
-ul.ft-drop-down {
+div.ft-drop-down {
 	background-color: #eee;
 	border: solid 1px #aaa;
 	border-bottom: 0px; /* use the border provided by the last item */
@@ -135,18 +135,18 @@ ul.ft-drop-down {
 	position: absolute;
 	left: 0px;
 }
-span:hover ul.ft-drop-down {
+span:hover div.ft-drop-down {
 	display: block;
 }
-ul.ft-drop-down li {
+div.ft-drop-down > div {
 	white-space: nowrap;
 	padding: 2px 0px !important;
 	border-bottom: solid 1px #aaa;
 }
-ul.ft-drop-down li:hover {
+div.ft-drop-down > div:hover {
 	background-color: #d0d0d0;
 }
-ul.ft-drop-down li a, ul.ft-drop-down span {
+div.ft-drop-down > div a, div.ft-drop-down span {
 	text-decoration: none;
 	display: block;
 	cursor: pointer;
