popup-links.css: let inner element of li fill up vertical space.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5247 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/popup-links.css
+++ b/content/resources/css/popup-links.css
@@ -28,11 +28,11 @@ ul.ft-popup-list > li {
 	white-space: nowrap;
 	height: 20px;
 	padding: 0px 2px !important;
-	margin: 0px 0px;
+	margin: 0px;
 }
 ul.ft-popup-list > li  > a,  ul.ft-popup-list > li > span {
+	height: 100%;
 	text-align: left;
-	vertical-align: middle;
 	cursor: pointer;
 	display: block !important;
 	font-weight: normal !important;
