foruchangeposts.js: some tweaks and error fixes of CopyPosting.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5249 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -124,6 +124,7 @@ td.ft-lineup-cell { vertical-align: middle !important; }
 /* pop lists that are displayed when hovering */
 span.ft-pop-up-span {
 	position: relative;
+	cursor: pointer;
 }
 span.ft-pop-up-span-icon {
 	position: relative;
