htthreadmarker.js: used CSS file for styling.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5292 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/user-content-example.css
+++ b/content/resources/css/user-content-example.css
@@ -71,6 +71,14 @@
 }
 
 
+/* Module HTThreadMarker */
+
+/* Link of threads by HT */
+.ft-ht-thread {
+	background: #ff7a7a;
+}
+
+
 /* Module MatchReportFormat */
 
 .ft-match-report-team-home, .ft-match-report-team-away, .ft-match-report-team-mine {
