--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -74,11 +74,27 @@ td.ft-lineup-cell { vertical-align: middle !important; }
 }
 
 /* TeamStats */
+#foxtrick_FTTeamStats_box table {
+	table-layout:fixed;
+	width:180px;
+}
+
+#foxtrick_FTTeamStats_box table  tr+tr td{
+	table-layout:fixed;
+	width:90px;
+	overflow:hidden;
+}
+
 #foxtrick_FTTeamStats_box table th {
-	font-size: 120%;
 	text-decoration: underline;
 	padding-bottom: 0.5em !important;
+	padding-top: 1em !important;
 }
+
+#foxtrick_FTTeamStats_box  table td {
+	font-size: 0.9em !important;
+}
+
 
 .ft-youth-series-estimation.near-start {
 	color: red;
@@ -118,6 +134,8 @@ td.ft-lineup-cell { vertical-align: middle !important; }
 .ft-last-login-diff {
 	margin-left: 10px;
 }
+
+
 
 /* pop lists that are displayed when hovering */
 span.ft-pop-up-span {
