tabletag popup tweak
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5301 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -143,9 +143,9 @@ span.ft-pop-up-span {
 	cursor: pointer;
 }
 span.ft-pop-up-span-icon {
-	position: relative;
+	position: absolute;
 	padding-right: 5px;
-	background: url(../img/pop-up.png) right center no-repeat;
+	background: url(../img/pop-up.png) 24px 4px no-repeat;
 }
 span.ft-pop-up-span > ul.ft-pop {
 	right:0px;
