less offensive matchreport colors. may not harm to keep old colors in user-style
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5340 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/htms-statistics.css
+++ b/content/resources/css/htms-statistics.css
@@ -4,16 +4,16 @@
 }
 
 .ft-htms-stats-win {
-	background-color: rgb(110, 110, 0);
+	background-color: white;
 	border: 1px solid #000000;
 }
 
 .ft-htms-stats-draw {
-	background-color: rgb(210, 210, 210);
+	background-color: #ddd;
 	float: right;
 }
 
 .ft-htms-stats-loss {
-	background-color: rgb(0, 110, 110);
+	background-color: #849D84;
 	float: right;
 }
