--- a/content/resources/css/match-report.css
+++ b/content/resources/css/match-report.css
@@ -4,46 +4,47 @@
 
 /* link or text of home team */
 .ft-match-report-team-home {
-	color: #9f0202 !important;
+	border: 1px solid #849D84;
+	color: #849D84 !important;
+	background-color: white !important
 }
 
 /* link or text of away team */
 .ft-match-report-team-away {
-	color: #16029f !important;
+	background-color: #849D84;
+	color: white !important;
 }
 
 /* link or text of my team */
 .ft-match-report-team-mine {
-	color: #55f !important;
 }
 
 /* normal events, involving players */
 .ft-match-report-event-normal {
-	background-color: #f5f5f5;
 }
 
 /* special events, including line-ups and half time break */
 .ft-match-report-event-special {
-	background-color: #e0e0e0;
+	border-bottom: 1px solid #849D84;
+	 padding-bottom:8px !important;
 }
 
 /* goal scored by my team */
 .ft-match-report-goal-mine {
-	background-color: #e3e9ff;
 }
 
 /* goal scored by home team */
 .ft-match-report-goal-home {
-	background-color: #ffe8e8;
+	background-color: #EEEEEE;
 }
 
 /* goal scored by away team */
 .ft-match-report-goal-away {
-	background-color: #e0efe0;
+	background-color: #EEEEEE;
 }
 
 /* scoreboard, the "a" must be specified here to remove the underline */
-a.ft-match-report-scoreboard {
+tr>td a.ft-match-report-scoreboard {
 	color: black !important;
 	text-decoration: none;
 	white-space: nowrap;
