copyicons position tweak. still pretty inconsistent
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5348 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/headercopyicons.css
+++ b/content/resources/css/headercopyicons.css
@@ -15,11 +15,11 @@ a.copyicon {
 }
 
 /* header icons postitions */
-a.ci_first { right:14px;}
-a.ci_second { right:51px;}
-a.ci_third {right:88px;}
-a.ci_fourth{right:125px;}
-a.ci_fifth{right:162px;}
+.ci_first { right:14px;}
+.ci_second { right:51px;}
+.ci_third {right:88px;}
+.ci_fourth{right:125px;}
+.ci_fifth{right:162px;}
 
 
 .copyplayerad img {
