--- a/content/resources/css/headercopyicons_simple.css
+++ b/content/resources/css/headercopyicons_simple.css
@@ -8,11 +8,11 @@ a.copyicon {
 }
 
 /* header icons postitions */
-a.ci_first { right:14px;}
-a.ci_second { right:51px;}
-a.ci_third {right:88px;}
-a.ci_fourth{right:125px;}
-a.ci_fifth{right:162px;}
+.ci_first { right:6px;}
+.ci_second { right:31px;}
+.ci_third {right:56px;}
+.ci_fourth{right:81px;}
+.ci_fifth{right:106px;}
 
 
 .copyicon img {
