match-report and match-player coloring fix messing
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5349 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/match-player-colouring.css
+++ b/content/resources/css/match-player-colouring.css
@@ -15,6 +15,7 @@
 }
 
 .ft-match-player-away {
+	border: 1px solid white;
 	background: none repeat scroll 0 0 #849D84;
 	color:white !important;
 }
