--- a/content/resources/css/changepost.css
+++ b/content/resources/css/changepost.css
@@ -2,4 +2,4 @@
 div[class="cfHeader ftdoubleLine"]  {height:30px !important;}
 div[class="cfHeader ftdoubleLine"] b:after {content:" " !important;}
 div[class="cfHeader ftdoubleLine"] br {display:none !important; padding: 5px;}
-div[class="message"] pre {font-size:12px; white-space:pre-wrap;border: 1px dotted #ABCDEF;padding:2px; margin:2px;}
+div[class="message"] pre, #forum_preview  pre{font-size:12px; white-space:pre-wrap;border: 1px dotted #ABCDEF;padding:2px; margin:2px;}
