Fixed type "qoute" to "quote".
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5369 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/mainr.css
+++ b/content/resources/css/mainr.css
@@ -690,7 +690,7 @@ table.form td, th
 	color: #666 !important;
 }
 
-div.qoute
+div.quote
 {
 	font-style: italic !important;
 	font-size: 0.9em !important;
