preferences-dialog-html.css: more readable colour when highlighting a module.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5431 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/preferences-dialog-html.css
+++ b/content/resources/css/preferences-dialog-html.css
@@ -32,7 +32,7 @@ div#foxtrick_prefs_head div.ft_pref_head:hover {
 }
 
 .ft_pref_highlight, .ft_pref_highlight:hover {
-	background-color: #77f !important;
+	background-color: #bbf !important;
 }
 
 #foxtrick_prefsave, #foxtrick_prefcancel {
