--- a/content/resources/css/preferences-dialog-html.css
+++ b/content/resources/css/preferences-dialog-html.css
@@ -39,13 +39,13 @@ div#foxtrick_prefs_head div.ft_pref_head:hover {
 	margin-left: 10px;
 }
 
-.ft_pref_modul {
+.ft_pref_module {
 	border: 1px solid #ccc;
 	margin: 5px;
 	padding: 5px;
 }
 
-.ft_pref_modul:hover {
+.ft_pref_module:hover {
 	background-color: #f8f8ff;
 	border: 1px solid #000;
 }
@@ -113,12 +113,12 @@ div.ft_icon foxtrickInfo:hover {
 	float: right;
 }
 
-.ft_pref_modul > div > label {
+.ft_pref_module > div > label {
 	font-weight: bold;
 }
 
 /* override HT sidebar padding for a elements */
-.sidebarBox .ft_pref_modul a {
+.sidebarBox .ft_pref_module a {
 	padding: 0px !important;
 }
 
@@ -133,78 +133,78 @@ div.ft_icon foxtrickInfo:hover {
 
 
 /* simple */
-#sidebar #foxtrick_OnPagePrefs_box .ft_pref_modul > div.ft_prefs_check_div label {
+#sidebar #foxtrick_OnPagePrefs_box .ft_pref_module > div.ft_prefs_check_div label {
 	width: 115px;
 	overflow: hidden;
 }
-#sidebar #foxtrick_OnPagePrefs_box .ft_pref_modul > div.ft_pref_checkbox_group label {
+#sidebar #foxtrick_OnPagePrefs_box .ft_pref_module > div.ft_pref_checkbox_group label {
 	width: 105px;
 	overflow: hidden;
 }
-#sidebar #foxtrick_OnPagePrefs_box .ft_pref_modul > div.ft_pref_radio_group label {
+#sidebar #foxtrick_OnPagePrefs_box .ft_pref_module > div.ft_pref_radio_group label {
 	width: 105px;
 	overflow: hidden;
 }
-.subMenu #foxtrick_OnPagePrefs_box .ft_pref_modul > div.ft_prefs_check_div label {
+.subMenu #foxtrick_OnPagePrefs_box .ft_pref_module > div.ft_prefs_check_div label {
 	width: 55px;
 	overflow: hidden;
 }
-.subMenu #foxtrick_OnPagePrefs_box .ft_pref_modul > div.ft_pref_checkbox_group label {
+.subMenu #foxtrick_OnPagePrefs_box .ft_pref_module > div.ft_pref_checkbox_group label {
 	width: 45px;
 	overflow: hidden;
 }
-.subMenu #foxtrick_OnPagePrefs_box .ft_pref_modul > div.ft_pref_radio_group label {
+.subMenu #foxtrick_OnPagePrefs_box .ft_pref_module > div.ft_pref_radio_group label {
 	width: 45px;
 	overflow: hidden;
 }
-.subMenuConf #foxtrick_OnPagePrefs_box .ft_pref_modul > div.ft_prefs_check_div label {
+.subMenuConf #foxtrick_OnPagePrefs_box .ft_pref_module > div.ft_prefs_check_div label {
 	width: 155px;
 	overflow: hidden;
 }
-.subMenuConf #foxtrick_OnPagePrefs_box .ft_pref_modul > div.ft_pref_checkbox_group label {
+.subMenuConf #foxtrick_OnPagePrefs_box .ft_pref_module > div.ft_pref_checkbox_group label {
 	width: 145px;
 	overflow: hidden;
 }
-.subMenuConf #foxtrick_OnPagePrefs_box .ft_pref_modul > div.ft_pref_radio_group label {
+.subMenuConf #foxtrick_OnPagePrefs_box .ft_pref_module > div.ft_pref_radio_group label {
 	width: 145px;
 	overflow: hidden;
 }
 
 
 /* std */
-#sidebar #foxtrick_OnPagePrefs_box .boxBody .ft_pref_modul > div.ft_prefs_check_div label {
+#sidebar #foxtrick_OnPagePrefs_box .boxBody .ft_pref_module > div.ft_prefs_check_div label {
 	width: 115px;
 	overflow: hidden;
 }
-#sidebar #foxtrick_OnPagePrefs_box .boxBody .ft_pref_modul > div.ft_pref_checkbox_group label {
+#sidebar #foxtrick_OnPagePrefs_box .boxBody .ft_pref_module > div.ft_pref_checkbox_group label {
 	width: 105px;
 	overflow: hidden;
 }
-#sidebar #foxtrick_OnPagePrefs_box .boxBody .ft_pref_modul > div.ft_pref_radio_group label {
+#sidebar #foxtrick_OnPagePrefs_box .boxBody .ft_pref_module > div.ft_pref_radio_group label {
 	width: 105px;
 	overflow: hidden;
 }
-.subMenu #foxtrick_OnPagePrefs_box .boxBody .ft_pref_modul > div.ft_prefs_check_div label {
+.subMenu #foxtrick_OnPagePrefs_box .boxBody .ft_pref_module > div.ft_prefs_check_div label {
 	width: 75px;
 	overflow: hidden;
 }
-.subMenu #foxtrick_OnPagePrefs_box .boxBody .ft_pref_modul > div.ft_pref_checkbox_group label {
+.subMenu #foxtrick_OnPagePrefs_box .boxBody .ft_pref_module > div.ft_pref_checkbox_group label {
 	width: 65px;
 	overflow: hidden;
 }
-.subMenu #foxtrick_OnPagePrefs_box .boxBody .ft_pref_modul > div.ft_pref_radio_group label {
+.subMenu #foxtrick_OnPagePrefs_box .boxBody .ft_pref_module > div.ft_pref_radio_group label {
 	width: 65px;
 	overflow: hidden;
 }
-.subMenuConf #foxtrick_OnPagePrefs_box .boxBody .ft_pref_modul > div.ft_prefs_check_div label {
+.subMenuConf #foxtrick_OnPagePrefs_box .boxBody .ft_pref_module > div.ft_prefs_check_div label {
 	width: 195px;
 	overflow: hidden;
 }
-.subMenuConf #foxtrick_OnPagePrefs_box .boxBody .ft_pref_modul > div.ft_pref_checkbox_group label {
+.subMenuConf #foxtrick_OnPagePrefs_box .boxBody .ft_pref_module > div.ft_pref_checkbox_group label {
 	width: 185px;
 	overflow: hidden;
 }
-.subMenuConf #foxtrick_OnPagePrefs_box .boxBody .ft_pref_modul > div.ft_pref_radio_group label {
+.subMenuConf #foxtrick_OnPagePrefs_box .boxBody .ft_pref_module > div.ft_pref_radio_group label {
 	width: 185px;
 	overflow: hidden;
 }
