Added FoxTrick icon to toolbar palette.
In latest Firefox nightly, the status bar is removed, so toolbar icon may be
needed.

git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5438 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/overlay.css
+++ b/content/resources/css/overlay.css
@@ -7,3 +7,11 @@
 #foxtrick-status-bar-img[status="disabled"] {
 	list-style-image: url("chrome://foxtrick/skin/disabled.png");
 }
+
+#foxtrick-toolbar-preferences {
+	list-style-image: url("chrome://foxtrick/skin/icon-24.png");
+}
+
+toolbar[iconsize="small"] #foxtrick-toolbar-preferences {
+	list-style-image: url("chrome://foxtrick/skin/icon-16.png");
+}
