--- a/content/resources/css/foxtrick_stage.css
+++ b/content/resources/css/foxtrick_stage.css
@@ -1,1 +1,2 @@
 #stageLogo {padding-bottom:0px !important; margin-top:-15px!important; height:60px !important; background-image: url('chrome://foxtrick/content/resources/img/logo_green_stage_foxtrick.png') !important;}
+a.forumSearch, a.forumSearch2 {right: 54px !important; top: 0px !important;}
