user-content-example.css: fixed a typo.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5497 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/user-content-example.css
+++ b/content/resources/css/user-content-example.css
@@ -142,7 +142,7 @@
 }
 
 
-/* Module MatchPlayerOrdering */
+/* Module MatchPlayerColouring */
 
 /* general styles for team names on the sidebar */
 .sidebarBox .ft-match-player-home, .sidebarBox .ft-match-player-away,
