Feedback after saving preferences.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5516 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/preferences.css
+++ b/content/resources/css/preferences.css
@@ -90,17 +90,37 @@ div#panes
 	overflow-y: auto;
 }
 
-#balloon
+#fixed
 {
 	position: fixed;
 	right: 20px;
 	top: 20px;
+}
+
+#balloon
+{
 	padding: 10px;
 	border: 1px solid #ccc;
 	background-color: #aaa;
+	float: right;
 }
 
 #save
 {
 	font-weight: bold;
+}
+
+#note
+{
+	display: none;
+	cursor: pointer;
+	position: relative;
+	z-index: 10;
+	top: 20px;
+	right: 20px;
+	font-size: 250%;
+	font-weight: bold;
+	padding: 40px;
+	color: #b3b3b3;
+	background-color: #7da;
 }
