Added screenshot for preferences.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5529 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/preferences.css
+++ b/content/resources/css/preferences.css
@@ -48,6 +48,19 @@ input
 	border-color: black;
 }
 
+.screenshot
+{
+	float: right;
+	width: 16px;
+	height: 16px;
+	background: url("chrome://foxtrick/content/resources/img/screenshot.png") no-repeat 50% 50%;
+}
+
+.screenshot:hover
+{
+	background-image: url("chrome://foxtrick/content/resources/img/screenshot-hover.png");
+}
+
 .clear
 {
 	clear: both;
