--- a/content/resources/css/CountyList.css
+++ b/content/resources/css/CountyList.css
@@ -1,4 +1,4 @@
-@-moz-document domain(hattrick.org), domain(hattrick.interia.pl), domain(hattrick.ws) {
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
 
 #ctl00_CPMain_ucLeaguesDropdown_ddlLeagues {display:none;}
 #ctl00_CPMain_ddlZone {display:none;}
