--- a/content/resources/css/FoxtrickMatchTables_league.css
+++ b/content/resources/css/FoxtrickMatchTables_league.css
@@ -1,5 +1,5 @@
 
-@-moz-document domain(hattrick.org), domain(hattrick.interia.pl), domain(hattrick.ws) {
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
 
 
 table[class="indent left thin"] td, table[class="indent right thin"] td {font-size: 0.95em !important; padding:1px 1px !important; height:24px;}
