--- a/content/resources/css/FoxtrickMatchTables_matches.css
+++ b/content/resources/css/FoxtrickMatchTables_matches.css
@@ -1,5 +1,5 @@
 
-@-moz-document domain(hattrick.org), domain(hattrick.interia.pl), domain(hattrick.ws) {
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
 
 #mainBody table {margin-left:-8px;width:440px !important;}
 #mainBody table tr>td+td+td+td+td+td+td {display:none;}
