--- a/content/resources/css/HideFaceSuspendedImages.css
+++ b/content/resources/css/HideFaceSuspendedImages.css
@@ -1,4 +1,4 @@
-@-moz-document domain(hattrick.org), domain(hattrick.interia.pl), domain(hattrick.ws) {
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
 
 .faceCard img[src*='/Img/Avatar/misc/red']  {display:none;}
 
