--- a/content/resources/css/backgroundfixed.css
+++ b/content/resources/css/backgroundfixed.css
@@ -1,5 +1,5 @@
 /* backgroundFixed @author smates */
-@-moz-document domain(hattrick.org), domain(hattrick.interia.pl), domain(hattrick.ws) {
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
 body{
 background-attachment: fixed !important;
 }
