--- a/content/resources/css/fixes/BookmarkHeaderSmall.css
+++ b/content/resources/css/fixes/BookmarkHeaderSmall.css
@@ -1,4 +1,4 @@
-@-moz-document domain(hattrick.org), domain(hattrick.interia.pl), domain(hattrick.ws) {
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
 
 .bookmarkMessage img {
 	background:transparent url('chrome://foxtrick/content/resources/img/bookmark_post.png') no-repeat scroll
