--- a/content/resources/css/fixes/HideFlagsInForumHeader.css
+++ b/content/resources/css/fixes/HideFlagsInForumHeader.css
@@ -1,4 +1,4 @@
-@-moz-document domain(hattrick.org), domain(hattrick.interia.pl), domain(hattrick.ws) {
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
 
 div.mainConf div.cfHeader  a[class="flag inner"] {display:none !important;}
 
