--- a/content/resources/css/fixes/League_Table.css
+++ b/content/resources/css/fixes/League_Table.css
@@ -1,4 +1,4 @@
-@-moz-document domain(hattrick.org), domain(hattrick.interia.pl), domain(hattrick.ws) {
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
 
 
 #ctl00_CPMain_repLeagueTable_ctl00_td1,
