--- a/content/resources/css/fixes/MatchReportRatingsFontFix.css
+++ b/content/resources/css/fixes/MatchReportRatingsFontFix.css
@@ -1,4 +1,4 @@
-@-moz-document domain(hattrick.org), domain(hattrick.interia.pl), domain(hattrick.ws) {
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
 .smallText {
 font-size: 1em !important;
 }
