--- a/content/resources/css/fixes/RTL_Fixes_simple.css
+++ b/content/resources/css/fixes/RTL_Fixes_simple.css
@@ -1,4 +1,4 @@
-@-moz-document domain(hattrick.org), domain(hattrick.interia.pl), domain(hattrick.ws) {
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
 
 div.mainRegular {margin: 0 0px 20px 10px !important;}
 
