--- a/content/resources/css/fixes/RemoveHeaderFixFlicker.css
+++ b/content/resources/css/fixes/RemoveHeaderFixFlicker.css
@@ -1,4 +1,4 @@
-@-moz-document domain(hattrick.org), domain(hattrick.interia.pl), domain(hattrick.ws) {
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
 
 div.mainConf div.cfWrapper  div.message, blockquote.spoiler , div.HTinsert div.insertBody , div.mainConf div.cfInnerWrapper  div.cfMessage {overflow:hidden !important;}
 div.mainConf div.cfWrapper  div.message table td, div.mainConf div.cfWrapper  div.message table th {padding: 3px 1px 3px 1px !important}
