--- a/content/resources/css/fixes/staffmarker.css
+++ b/content/resources/css/fixes/staffmarker.css
@@ -1,4 +1,4 @@
-@-moz-document domain(hattrick.org), domain(hattrick.interia.pl), domain(hattrick.ws) {
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
 
 .boxBody .teamInfo  a[title*="HT-"], .boxBody #ctl00_CPMain_pnlMySupporters .myht1 a[title*="HT-"] , #sidebar a[title*="HT-"][href*="userId"] , .feedItem .shy a[title*="HT-"] {
     background-color:red; color:white !important; font-weight:700;padding:1px;text-decoration:none;
