--- a/content/resources/css/headerfix.css
+++ b/content/resources/css/headerfix.css
@@ -1,5 +1,5 @@
 /* HeaderFix by Catalyst2950 and foxtrick devs*/
-@-moz-document domain(hattrick.org), domain(hattrick.interia.pl), domain(hattrick.ws) {
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
 
 
 /* Fix the header on screen */
