--- a/content/resources/css/headerfix_std_rtl.css
+++ b/content/resources/css/headerfix_std_rtl.css
@@ -1,5 +1,5 @@
 /* HeaderFix by Catalyst2950 */
-@-moz-document domain(hattrick.org), domain(hattrick.interia.pl), domain(hattrick.ws) {
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
 
 /* Fix the header on screen */
 #aspnetForm:not([action*="Simple.aspx?matchId="]):not([action*="Default.aspx?MatchID="]):not([action*="useFlashVersion=True"]):not([action="Live_Flash.aspx"]):not([action*="Alltid"]) #header {
