--- a/content/resources/css/mainr.css
+++ b/content/resources/css/mainr.css
@@ -2,7 +2,7 @@
 
 @namespace url(http://www.w3.org/1999/xhtml);
 
-@-moz-document domain(hattrick.org), domain(hattrick.interia.pl), domain(hattrick.ws) {
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
 
 body
 {
