--- a/content/resources/css/seasonstats.css
+++ b/content/resources/css/seasonstats.css
@@ -1,4 +1,4 @@
-@-moz-document domain(hattrick.org), domain(hattrick.interia.pl), domain(hattrick.ws) {
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
 
 .ft_seasonstats_td {
     padding: 0 0 0 0  !important;
