--- a/content/resources/css/youthskill_simple.css
+++ b/content/resources/css/youthskill_simple.css
@@ -1,4 +1,4 @@
-@-moz-document domain(hattrick.org), domain(hattrick.interia.pl), domain(hattrick.ws) {
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
 
 div.youthnotes .alert {
 padding:0px !important;
