Added some styles for tables in preferences.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5541 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/preferences.css
+++ b/content/resources/css/preferences.css
@@ -35,6 +35,19 @@ input
 	width: 450px;
 }
 
+table.bordered, table.bordered td, table.bordered th {
+	border: 1px solid #ccc;
+	border-collapse: collapse;
+}
+
+table {
+	margin-top: 20px;
+}
+
+table th:first-child {
+	text-align: left;
+}
+
 .module
 {
 	border: 1px solid #ccc;
