Parse module and tab given in URI fragment.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5569 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/preferences.css
+++ b/content/resources/css/preferences.css
@@ -61,6 +61,14 @@ table th:first-child {
 	border-color: black;
 }
 
+.module-link
+{
+	color: #333;
+	text-decoration: none;
+	font-size: 75%;
+	margin-left: 2em;
+}
+
 .screenshot
 {
 	float: right;
