preferences.css: only set width for text input.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5597 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/preferences.css
+++ b/content/resources/css/preferences.css
@@ -35,6 +35,11 @@ input
 	width: 450px;
 }
 
+input[type] /* only set width for text input */
+{
+	width: auto;
+}
+
 table.bordered, table.bordered td, table.bordered th {
 	border: 1px solid #ccc;
 	border-collapse: collapse;
